added option for user to disable desktop notifications

--- a/options.html
+++ b/options.html
@@ -33,6 +33,8 @@
 
   <label><input id="soundEnabled" type="checkbox" /> Play sound</label>
 
+  <label><input id="desktopNotify" type="checkbox" /> Desktop notification</label>
+
   <div>
     <button id="save">Save</button>
   </div>
