added option for user to keep screen awake while scanning

--- a/options.html
+++ b/options.html
@@ -35,6 +35,8 @@
 
   <label><input id="desktopNotify" type="checkbox" /> Desktop notification</label>
 
+  <label><input id="keepAwake" type="checkbox" /> Keep computer awake while scanning</label>
+
   <div>
     <button id="save">Save</button>
   </div>
